--- a/src/BUILD
+++ b/src/BUILD
@@ -1,4 +1,9 @@
 cc_binary(
     name = "hello-world",
     srcs = ["hello-world.cc"],
+    deps = [
+      "@io_opentelemetry_cpp//api",
+      "@io_opentelemetry_cpp//exporters/otlp:otlp_grpc_exporter",
+      "@io_opentelemetry_cpp//sdk/src/trace",
+   ],
 )
