moving drogon to git repository

--- a/src/opentelemetry/BUILD
+++ b/src/opentelemetry/BUILD
@@ -1,13 +1,12 @@
 cc_binary(
     name = "hello-world",
     srcs = [
-      "tracer_provider.h",
-      "tracer_provider.cc"
+      "tracing/tracer_provider.h",
+      "tracing/tracer_provider.cc"
    ],
     deps = [
       "@io_opentelemetry_cpp//api",
       "@io_opentelemetry_cpp//exporters/ostream:ostream_span_exporter",
       "@io_opentelemetry_cpp//sdk/src/trace",
-      "//external:drogon",
    ],
 )
